[gd_scene load_steps=13 format=3 uid="uid://brao5gdnxrlj1"]

[ext_resource type="Script" path="res://scripts/learning_material_scripts/intro_level/dialogue_boxes/topic_one/dialogue_box_L7.gd" id="1_rty3u"]
[ext_resource type="Texture2D" uid="uid://b562inkdnpvh7" path="res://images/learning_material_boxes/yellow.png" id="2_17f5a"]
[ext_resource type="FontFile" uid="uid://cwbqlu04cyyvj" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Bold.ttf" id="3_w6v4x"]
[ext_resource type="Texture2D" uid="uid://c61vkjdl8heew" path="res://images/learning_material_boxes/arrow_yellow.png" id="4_lw6yl"]
[ext_resource type="FontFile" uid="uid://c1w4uwymgxw6f" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Italic.ttf" id="5_1c4f4"]
[ext_resource type="Script" path="res://scripts/block_area.gd" id="6_lkwke"]

[sub_resource type="Animation" id="Animation_3o6vt"]
resource_name = "display"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialogue_box_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cy4aj"]
resource_name = "dissolve"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialogue_box_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wo8im"]
resource_name = "shake_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialogue_box_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-99, 27), Vector2(-109, 27), Vector2(-89, 27), Vector2(-149, 27), Vector2(-99, 27), Vector2(-109, 27)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exk74"]
_data = {
"display": SubResource("Animation_3o6vt"),
"dissolve": SubResource("Animation_cy4aj"),
"shake_animation": SubResource("Animation_wo8im")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8j3br"]
size = Vector2(701, 844)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc6bu"]
size = Vector2(684, 843.5)

[node name="dialogue_lesson7" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rty3u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_exk74")
}

[node name="dialogue_box_sprite" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -109.0
offset_top = 27.0
offset_right = 687.0
offset_bottom = 390.0
texture = ExtResource("2_17f5a")

[node name="panel" type="Panel" parent="dialogue_box_sprite"]
modulate = Color(1, 1, 1, 0.560784)
layout_mode = 0
offset_left = 155.0
offset_top = 48.0
offset_right = 662.0
offset_bottom = 314.0

[node name="dialogue_text" type="RichTextLabel" parent="dialogue_box_sprite/panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 497.0
offset_bottom = 234.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/bold_font = ExtResource("3_w6v4x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true

[node name="Arrow" type="Sprite2D" parent="dialogue_box_sprite/panel"]
visible = false
position = Vector2(477.052, 243.214)
rotation = 1.5708
texture = ExtResource("4_lw6yl")

[node name="VBoxContainer" type="VBoxContainer" parent="dialogue_box_sprite/panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -29.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="dialogue_box_sprite/panel/VBoxContainer"]
modulate = Color(1, 1, 1, 0.839216)
self_modulate = Color(1, 1, 1, 0.835294)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_1c4f4")
text = "Got it!"

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="block_area" type="StaticBody2D" parent="."]
script = ExtResource("6_lkwke")

[node name="area_2d" type="Area2D" parent="block_area"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area/area_2d"]
position = Vector2(372.5, 219)
shape = SubResource("RectangleShape2D_8j3br")
debug_color = Color(0.788235, 0, 0.0196078, 0.419608)

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area"]
position = Vector2(372, 219.25)
shape = SubResource("RectangleShape2D_hc6bu")
debug_color = Color(0, 0, 0, 0.0784314)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="dialogue_box_sprite/panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
[connection signal="player_hit" from="block_area" to="." method="_on_block_area_player_hit"]
